--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,17 @@ body{height:4000px;}
 #portfolio .filter-menu ul li:hover,
 #portfolio .filter-menu ul li.active{background:#50d8af; color:#fff;}
 
+
 #portfolio .portfolio-container{margin:30px 0 0 0; display:flex;}
 #portfolio .portfolio-item{width:25%; padding:5px;}
-#portfolio .portfolio-item .port-wrap{width:100%; height:100%;}
-#portfolio .portfolio-item img{width:100%; _height:100%; display:block;}
+#portfolio .portfolio-item .port-wrap{width:100%; height:100%; overflow: hidden; position: relative;}
+#portfolio .portfolio-item img{width:100%; _height:100%; display:block; position: relative; top: 0; transition: all 0.4s;}
+#portfolio .portfolio-item:hover img{top: -30px;}
+
+.portfolio .port-infor{position: absolute; width: 100%; bottom: -30px; background: #50d8af; padding: 10px 30px; transition: all 0.4s; opacity: 0; display: flex; justify-content: space-between;}
+#portfolio .portfolio-item:hover .port-infor{opacity: 1; bottom: 0px;}
+
+#portfolio .port-infor .port-tit h4{font-size: 18px; font-weight:600;}
+#portfolio .port-infor .port-tit p{font-size: 14px; margin-bottom: 0; color: #fff;}
+#portfolio .port-infor .link-btns a{color:#fff; display: inline-block; margin: 0 5px;}
+#portfolio .port-infor .link-btns a i{font-size: 18px;}
