--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ a{color:#50d8af; text-decoration: none;}
 ol, ul{list-style:none;}
 p{padding:0; margin:0 0 30px 0;}
 h1, h2, h3, h4, h5, h6{font-family:"Montserrat"; font-weight:400; margin:0 0 20px 0; padding:0;}
-input, textarea, button{outline:0;}
+input, textarea, button{outline:0; border:1px solid #999}
 textarea{resize:none;}
 
 /* Layout Reset Style Code */
@@ -54,8 +54,6 @@ textarea{resize:none;}
 #intro .item{display:flex; justify-content: center; align-items: center;} */
 #intro .overlay{position:absolute; width:100%; height:100%; left:0; top:0; background:rgba(255, 255, 255, 0.5); z-index:10;}
 #intro .intro-contents{background:transparent; z-index:11; position:relative; display:flex; flex-direction: column; text-align:center;}
-
-body{height:4000px;}
 
 /* Main Slogan Text Style Code */
 #intro .intro-contents h2{font-size:64px; color:#0c2e8a; font-weight:700; margin:0 0 40px 0;}
@@ -114,10 +112,30 @@ body{height:4000px;}
 #portfolio .portfolio-item img{width:100%; _height:100%; display:block; position: relative; top: 0; transition: all 0.4s;}
 #portfolio .portfolio-item:hover img{top: -30px;}
 
-.portfolio .port-infor{position: absolute; width: 100%; bottom: -30px; background: #50d8af; padding: 10px 30px; transition: all 0.4s; opacity: 0; display: flex; justify-content: space-between;}
-#portfolio .portfolio-item:hover .port-infor{opacity: 1; bottom: 0px;}
+#portfolio .port-info{position: absolute; width: 100%; bottom: -30px; background: #50d8af; padding: 10px 30px; transition: all 0.4s; opacity: 0; display: flex; justify-content: space-between; align-items: center;}
+#portfolio .portfolio-item:hover .port-info{opacity: 1; bottom: 0px;}
 
-#portfolio .port-infor .port-tit h4{font-size: 18px; font-weight:600;}
-#portfolio .port-infor .port-tit p{font-size: 14px; margin-bottom: 0; color: #fff;}
-#portfolio .port-infor .link-btns a{color:#fff; display: inline-block; margin: 0 5px;}
-#portfolio .port-infor .link-btns a i{font-size: 18px;}
+#portfolio .port-info .port-tit h4{font-size: 18px; font-weight:600;}
+#portfolio .port-info .port-tit p{font-size: 14px; margin-bottom: 0; color: #fff;}
+#portfolio .port-info .link-btns a{color:#fff; display: inline-block; margin: 0 5px;}
+#portfolio .port-info .link-btns a i{font-size: 18px;}
+
+/* contact me section style code */
+#contact .map{width: 100%; height: 400px; margin: 20px 0;}
+#contact .map iframe{width: 100%; height: 100%; border: 0;}
+
+#contact .form-area{width: 100%; height: auto;}
+#contact .form-area p{margin-bottom: 10px;}
+#contact .form-area .name-email{width: 100%; height: auto; display: flex; justify-content: space-between;}
+#contact .form-area .name-email input{width: calc(50% - 5px); padding: 10px;}
+#contact .form-area input:focus{border: 1px solid #50d8af;}
+#contact .form-area .subjact{width: 100%; height: auto;}
+#contact .form-area .subjact input{padding: 10px; width: 100%;}
+#contact .form-area .message{width: 100%; height: auto;}
+#contact .form-area .message textarea{width: 100%; height: 200px; padding: 10px; font-family: 'Open-Sans';}
+#contact .form-area .message textarea:focus{border: 1px solid #50d8af;}
+#contact .form-area .send-btn{width: 100%; height: auto; display: flex;}
+#contact .form-area .send-btn button{border: 0; color: #fff; font-weight: 600; padding: 10px 30px; background: #50d8af; cursor: pointer;}
+
+footer{width: 100%; height: auto; display: flex; background: #50d8af;}
+footer p{padding: 25px 0; color: #fff; font-weight: 600; margin-bottom: 0;}
